Проведен рефакторинг кода по советам пользователя "Алексей" из чата. Исправлены недочеты до 14 пункта включительно.